2006-10-05  Ronaldo Maia  <romaia@async.com.br>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/validation/personalinformation.glade: Add an example.
	* kiwi/enums.py:
	* kiwi/ui/comboboxentry.py: Use KiwiEntry instead of ProxyEntry
	* kiwi/ui/entry.py: 
	* kiwi/ui/widgets/entry.py:
	* tests/test_BaseView.py: Fix destruction of windows.
	* tests/test_Entry.py: 
	* tests/test_masks.py:

	Refactor mask handling in KiwiEntry. Now it supports the use of fields. 
	Fixes #2838

2006-10-04  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/component.py:
	* tests/test_component.py:
	Add remove_utility and an extra argument to get_utility which
	is similar to dict.get. Add tests too.

2006-09-29  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/entry.py (KiwiEntry.__init__): Make ProxyEntries work with
	PyGTK 2.10 again.

2006-09-27  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py	(Column): Document properties
	(ObjectList): Document signals and properties

2006-09-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py (Library.enable_translation)
	(Library.set_application_domain): Call locale.textdomain/
	locale.bindtextdomain aswell so libglade and other
	applications using libcs translation functions are going
	to work

=== 1.9.10 ===
2006-09-15  Johan Dahlin  <jdahlin@async.com.br>

	* Makefile: add to simplify release process
	* setup.py: install documentation

2006-09-12  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/python.py (enum): Add a new data type

	* tests/test_python.py (EnumTest): and a test

2006-09-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* tests/test_tasklet.py: Add WaitForCall test.

	* kiwi/tasklet.py (WaitForCall): Add a new WaitForCall wait
	condition, for waiting for a generic callback.

	* tests/test_tasklet.py: Add a few more tests.

	* kiwi/tasklet.py (Tasklet): Better handling of the StopIteration
	exception from tasklets.  Add a new STATE_ZOMBIE state to indicate