@@ -1,3 +1,10 @@
+2006-10-09  Ronaldo Maia  <romaia@async.com.br>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/objectlist.py: Add right-click and emit double-click
+	only when a row is selected, fixes #2817
+
 2006-10-05  Ronaldo Maia  <romaia@async.com.br>
 
 	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
